@@ -7,7 +7,6 @@ import cuke4duke.internal.language.LanguageMixin;
 import groovy.lang.Closure;
 
 import java.util.List;
-import java.util.regex.Pattern;
 
 /**
  * The DSL for Groovy step definitions.
@@ -24,19 +23,19 @@ public class GroovyDsl {
         languageMixin.add_hook("after", new GroovyHook(tagNames, body, groovyLanguage));
     }
 
-    public static void Given(Pattern pattern, Closure body) {
-        registerStepDefinition(pattern, body);
+    public static void Given(String regexp, Closure body) {
+        registerStepDefinition(regexp, body);
     }
 
-    public static void When(Pattern pattern, Closure body) {
-        registerStepDefinition(pattern, body);
+    public static void When(String regexp, Closure body) {
+        registerStepDefinition(regexp, body);
     }
 
-    public static void Then(Pattern pattern, Closure body) {
-        registerStepDefinition(pattern, body);
+    public static void Then(String regexp, Closure body) {
+        registerStepDefinition(regexp, body);
     }
 
-    private static void registerStepDefinition(Pattern pattern, Closure body) {
-        groovyLanguage.addStepDefinition(new GroovyStepDefinition(groovyLanguage, pattern, body));
+    private static void registerStepDefinition(String regexp, Closure body) {
+        groovyLanguage.addStepDefinition(new GroovyStepDefinition(groovyLanguage, regexp, body));
     }
 }
